src/parser/snapshots/coconut__parser__statement__tests__continue_stmt-5.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"continue\\t\".into()).unwrap().1"
---
{
  "type": "ContinueStatement",
  "label": null,
  "start": 0,
  "end": 8
}
