src/parser/snapshots/coconut__parser__statement__tests__continue_stmt.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"continue;\".into()).unwrap().1"
---
{
  "type": "ContinueStatement",
  "label": null,
  "start": 0,
  "end": 9
}
