src/parser/snapshots/coconut__parser__statement__tests__empty_stmt-2.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"; \".into()).unwrap().1"
---
{
  "type": "EmptyStatement",
  "start": 0,
  "end": 1
}
