src/parser/snapshots/coconut__parser__statement__tests__expr_stmt.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"x + y;\".into()).unwrap().1"
---
{
  "type": "ExpressionStatement",
  "expression": {
    "type": "BinaryExpression",
    "operator": "+",
    "left": {
      "type": "Identifier",
      "name": "x",
      "start": 0,
      "end": 1
    },
    "right": {
      "type": "Identifier",
      "name": "y",
      "start": 4,
      "end": 5
    },
    "start": 0,
    "end": 5
  },
  "start": 0,
  "end": 6
}
