src/parser/snapshots/coconut__parser__statement__tests__expr_stmt_immediately_invoked_function_expr.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"(function () {\n            return 0;\n        })();\".into()).unwrap().1"
---
{
  "type": "ExpressionStatement",
  "expression": {
    "type": "CallExpression",
    "callee": {
      "type": "FunctionExpression",
      "id": null,
      "params": [],
      "body": {
        "type": "BlockStatement",
        "body": [
          {
            "type": "ReturnStatement",
            "argument": {
              "type": "Literal",
              "value": 0.0,
              "start": 34,
              "end": 35
            },
            "start": 27,
            "end": 36
          }
        ],
        "start": 13,
        "end": 46
      },
      "start": 1,
      "end": 46
    },
    "arguments": [],
    "start": 1,
    "end": 49
  },
  "start": 0,
  "end": 50
}
