src/parser/snapshots/coconut__parser__statement__tests__return_stmt-2.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"return a;\".into()).unwrap().1"
---
{
  "type": "ReturnStatement",
  "argument": {
    "type": "Identifier",
    "name": "a",
    "start": 7,
    "end": 8
  },
  "start": 0,
  "end": 9
}
